cmake_minimum_required(VERSION 3.17)
project(C_study C)

set(CMAKE_C_STANDARD 11)

add_executable(C_study
        KandR/1/1-10.c
        KandR/1/1-12.c
        KandR/1/1-13-tate.c
        KandR/1/1-13.c
        KandR/1/1-14.c
        KandR/1/1-15.c
        KandR/1/1-17.c
        KandR/1/1-18.c
        KandR/1/1-19.c
        KandR/1/1-4.c
        KandR/1/1-5.c
        KandR/1/1-6.c
        KandR/1/1-8.c
        KandR/1/1-9.c
        KandR/sample/hello.c
        KandR/sample/print_logest_line.c
        KandR/sample/temp-float.c
        KandR/sample/temp.c
        KandR/sample/temp2.c
        KandR/2/2-2.c
        KandR/2/2-3.c KandR/sample/strindex.c)
